# agenda_django

./: README.md  pyproject.toml
agenda_django/: db.sqlite3
agenda_django/READMEs/: 0-Comands.md  1-Basics.md
agenda_django/base_templates/global/: base.html
agenda_django/base_templates/global/partials/: _head.html  _header.html  _messages.html  _pagination.html  _seach_field.html
agenda_django/contact/: admin.py  models.py  old__forms.py  urls.py
agenda_django/contact/forms/: __init__.py  contact_form.py  register_form.py  register_update_form.py
agenda_django/contact/migrations/: 0001_initial.py  0002_contact_show.py  0003_contact_pictures.py  0004_category_contact_category.py  0005_alter_category_options_contact_owner.py
agenda_django/contact/templates/contact/: contact.html  create.html  index.html  login.html  register.html  user_update.html
agenda_django/contact/templates/contact/partials/: _user-form.html
agenda_django/contact/views/: contact_forms.py  contact_views.py  user_form.py
agenda_django/project/: settings.py  urls.py
agenda_django/utils/: create_contactis.py
servidor_local_docker_teste/: README.md  docker-compose.yml  dockerfile
