[tool.poetry]
name = "agenda-django"
version = "0.1.0"
description = ""
authors = ["bruno <b_linhares@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.5"
install = "^1.3.5"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
